--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c9a9c">  <td>20/03/08 12:31:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:basePack.TC05@6bf0219d]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td>  <td>main@1353530305</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>20/03/08 12:31:58</td>   <td>19932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05.testCase05()[pri:0, instance:basePack.TC05@6bf0219d]">testCase05</td> 
-  <td>main@1353530305</td>   <td></td> </tr>
-<tr bgcolor="8c9a9c">  <td>20/03/08 12:37:28</td>   <td>349213</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:basePack.TC05@6bf0219d]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1353530305</td>   <td></td> </tr>
+<tr bgcolor="7d6a68">  <td>20/03/14 11:51:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:javaP.MouseOver@6eceb130]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@270397815</td>   <td></td> </tr>
+<tr bgcolor="7aecef">  <td>20/03/14 11:52:08</td>   <td>13545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MouseOver.mouseOverTest()[pri:0, instance:javaP.MouseOver@6eceb130]">mouseOverTest</td> 
+  <td>main@270397815</td>   <td></td> </tr>
+<tr bgcolor="7d6a68">  <td>20/03/14 11:52:23</td>   <td>28592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:javaP.MouseOver@6eceb130]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td>  <td>main@270397815</td>   <td></td> </tr>
 </table>
