--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\atyag\AppData\Local\Temp\testng-eclipse-2134624745\testng-customsuite.xml</span>
+                    <span>C:\Users\atyag\AppData\Local\Temp\testng-eclipse-1055541941\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="javaP.MouseOver" hash-for-method="mouseOverTest">mouseOverTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="javaP.BrokenLinks" hash-for-method="handleMultipleBrowserWindows">handleMultipleBrowserWindows</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">javaP.MouseOver</span>
+              <span class="class-name">javaP.BrokenLinks</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="mouseOverTest">
-                  </a> <!-- mouseOverTest -->
-                  <span class="method-name">mouseOverTest</span>
+                  <a name="handleMultipleBrowserWindows">
+                  </a> <!-- handleMultipleBrowserWindows -->
+                  <span class="method-name">handleMultipleBrowserWindows</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\atyag\AppData\Local\Temp\testng-eclipse-2134624745\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\atyag\AppData\Local\Temp\testng-eclipse-1055541941\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;javaP.MouseOver&quot;/&gt;
+      &lt;class name=&quot;javaP.BrokenLinks&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'mouseOverTest')
-data.setCell(0, 2, 'javaP.MouseOver')
-data.setCell(0, 3, 15038);
+data.setCell(0, 1, 'handleMultipleBrowserWindows')
+data.setCell(0, 2, 'javaP.BrokenLinks')
+data.setCell(0, 3, 9955);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,18 +219,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">javaP.MouseOver</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">javaP.BrokenLinks</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">openBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">mouseOverTest</span>
-                <span class="method-start">13547 ms</span>
+                <span class="method-name">handleMultipleBrowserWindows</span>
+                <span class="method-start">11151 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">28593 ms</span>
+                <span class="method-start">21106 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
