--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7aecef">  <td>20/03/14 11:52:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MouseOver.mouseOverTest()[pri:0, instance:javaP.MouseOver@6eceb130]">mouseOverTest</td> 
+<tr bgcolor="7aecef">  <td>20/03/15 12:07:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokenLinks.handleMultipleBrowserWindows()[pri:0, instance:javaP.BrokenLinks@6eceb130]">handleMultipleBrowserWindows</td> 
   <td>main@270397815</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>20/03/14 11:51:54</td>   <td>-13545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:javaP.MouseOver@6eceb130]">&gt;&gt;openBrowser</td> 
+<tr bgcolor="7d6a68">  <td>20/03/15 12:07:36</td>   <td>-11149</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:javaP.BrokenLinks@6eceb130]">&gt;&gt;openBrowser</td> 
 <td>&nbsp;</td>  <td>main@270397815</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>20/03/14 11:52:23</td>   <td>15047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:javaP.MouseOver@6eceb130]">&lt;&lt;quitBrowser</td> 
+<tr bgcolor="7d6a68">  <td>20/03/15 12:07:57</td>   <td>9955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.quitBrowser()[pri:0, instance:javaP.BrokenLinks@6eceb130]">&lt;&lt;quitBrowser</td> 
 <td>&nbsp;</td>  <td>main@270397815</td>   <td></td> </tr>
 </table>
