Selenium Session 12April

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,886</td><td></td><td></td></tr>
+<tr><th colspan="7">Google Project</th></tr>
+<tr><td><a href="#t0">Test Page Title</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test Page URL</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,279</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">16,292</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">javaP.BrokenLinks</td><td><a href="#m0">handleMultipleBrowserWindows</a></td><td rowspan="1">1584254267912</td><td rowspan="1">9955</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Google Project</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test Page URL &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testngEx.TC02</td><td><a href="#m0">test02</a></td><td rowspan="1">1586679266693</td><td rowspan="1">15</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">javaP.BrokenLinks#handleMultipleBrowserWindows</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Page Title</h2><h2>Test Page URL</h2><h3 id="m0">testngEx.TC02#test02</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Page title is = https://www.google.com/?gws_rd=ssl</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
