Selenim Session 25April

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,24 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Google Project</th></tr>
-<tr><td><a href="#t0">Test Page Title</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test Page URL</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">16,279</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">1</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">16,292</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Test Page Title</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45,589</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test Page URL</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">46,955</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Selemct Date From Cal</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">53,285</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">145,829</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Google Project</th></tr></tbody><tbody id="t0"><tr><th colspan="4" class="invisible"/></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test Page URL &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testngEx.TC02</td><td><a href="#m0">test02</a></td><td rowspan="1">1586679266693</td><td rowspan="1">15</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Google Project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Page Title &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testngEx.TC01</td><td><a href="#m0">test01</a></td><td rowspan="1">1587799281140</td><td rowspan="1">25</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test Page URL &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testngEx.TC02</td><td><a href="#m1">test02</a></td><td rowspan="1">1587799281050</td><td rowspan="1">62</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Selemct Date From Cal &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testngEx.TC03</td><td><a href="#m2">test01</a></td><td rowspan="1">1587799286421</td><td rowspan="1">2315</td></tr></tbody>
 </table>
-<h2>Test Page Title</h2><h2>Test Page URL</h2><h3 id="m0">testngEx.TC02#test02</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Page title is = https://www.google.com/?gws_rd=ssl</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Page Title</h2><h3 id="m0">testngEx.TC01#test01</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Page title is = Cheap Airline Tickets, Hotels & Car Rentals | CheapOair</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test Page URL</h2><h3 id="m1">testngEx.TC02#test02</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Page title is = https://www.cheapoair.com/</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: did not expect to find [true] but found [false]
+	at testngEx.TC02.test02(TC02.java:20)
+	at java.util.ArrayList.forEach(Unknown Source)
+	at java.util.concurrent.FutureTask.run(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(Unknown Source)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(Unknown Source)
+	at java.lang.Thread.run(Unknown Source)
+... Removed 22 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Selemct Date From Cal</h2><h3 id="m2">testngEx.TC03#test01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
