--- a/test-output/old/Google Project/methods.html
+++ b/test-output/old/Google Project/methods.html
@@ -1,10 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Google Project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6a68">  <td>20/04/12 13:44:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser()[pri:0, instance:testngEx.TC02@6fb0d3ed]">&gt;&gt;openBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312884893</td>   <td></td> </tr>
-<tr bgcolor="9d7190">  <td>20/04/12 13:44:26</td>   <td>15540</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.test02()[pri:0, instance:testngEx.TC02@6fb0d3ed]">test02</td> 
-  <td>main@1312884893</td>   <td></td> </tr>
-<tr bgcolor="7d6a68">  <td>20/04/12 13:44:26</td>   <td>15559</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBroswer()[pri:0, instance:testngEx.TC02@6fb0d3ed]">&lt;&lt;closeBroswer</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1312884893</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser(java.lang.String)[pri:0, instance:testngEx.TC01@5c072e3f]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1260255157</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser(java.lang.String)[pri:0, instance:testngEx.TC03@4ae82894]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@1254739293</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:50:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.openBrowser(java.lang.String)[pri:0, instance:testngEx.TC02@24b1d79b]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1627168384</td>   <td></td> </tr>
+<tr bgcolor="94d6b9">  <td>20/04/25 12:51:21</td>   <td>25351</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.test02()[pri:0, instance:testngEx.TC02@24b1d79b]">test02</td> 
+  <td>TestNG-tests-2@1627168384</td>   <td></td> </tr>
+<tr bgcolor="8d779b">  <td>20/04/25 12:51:21</td>   <td>25441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.test01()[pri:0, instance:testngEx.TC01@5c072e3f]">test01</td> 
+  <td>TestNG-tests-1@1260255157</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:51:21</td>   <td>25464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBroswer(org.testng.ITestResult)[pri:0, instance:testngEx.TC02@24b1d79b]">&lt;&lt;closeBroswer</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1627168384</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:51:21</td>   <td>25477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBroswer(org.testng.ITestResult)[pri:0, instance:testngEx.TC01@5c072e3f]">&lt;&lt;closeBroswer</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1260255157</td>   <td></td> </tr>
+<tr bgcolor="76af84">  <td>20/04/25 12:51:26</td>   <td>30722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03.test01()[pri:0, instance:testngEx.TC03@4ae82894]">test01</td> 
+  <td>TestNG-tests-3@1254739293</td>   <td></td> </tr>
+<tr bgcolor="808f91">  <td>20/04/25 12:51:28</td>   <td>33039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeBroswer(org.testng.ITestResult)[pri:0, instance:testngEx.TC03@4ae82894]">&lt;&lt;closeBroswer</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-3@1254739293</td>   <td></td> </tr>
 </table>
