--- a/test-output/old/Google Project/reporter-output.html
+++ b/test-output/old/Google Project/reporter-output.html
@@ -1,2 +1,3 @@
-<h2>Reporter output</h2><table><tr><td>Page title is = https://www.google.com/?gws_rd=ssl</td></tr>
+<h2>Reporter output</h2><table><tr><td>Page title is = https://www.cheapoair.com/</td></tr>
+<tr><td>Page title is = Cheap Airline Tickets, Hotels & Car Rentals | CheapOair</td></tr>
 </table>
